--- a/exercise2.html
+++ b/exercise2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Student Management</title>
     <meta charset="utf-8">
@@ -9,61 +10,131 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
+
 <body>
 
-<style>
-    .container{
-        max-width: 600px;
-    }
-</style>
+    <style>
+        .container {
+            max-width: 600px;
+        }
+    </style>
 
-<div class="container">
-    <h3 class="mt-5 mb-3">Student Management</h3>
-    <form>
+    <div class="container">
+        <h3 class="mt-5 mb-3">Student Management</h3>
+        <form>
 
-        <div class="form-group">
-            <label for="firstname">First name:</label>
-            <input type="text" class="form-control" id="firstname" placeholder="Enter first name" name="firstname">
-        </div>
-        <div class="form-group">
-            <label for="lastname">Last name:</label>
-            <input type="text" class="form-control" id="lastname" placeholder="Enter last name" name="lastname">
-        </div>
+            <div class="form-group">
+                <label for="firstname">First name:</label>
+                <input type="text" class="form-control" id="firstname" placeholder="Enter first name" name="firstname">
+            </div>
+            <div class="form-group">
+                <label for="lastname">Last name:</label>
+                <input type="text" class="form-control" id="lastname" placeholder="Enter last name" name="lastname">
+            </div>
 
-        <div class="form-group ">
-            <label for="email">Email:</label>
-            <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
-        </div>
-        <button class="btn btn-success px-5 mr-1" type="button" class="btn btn-default">Add</button>
-        <button class="btn btn-outline-primary px-5" type="button" class="btn btn-default">Reset</button>
-    </form>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+            </div>
+            <button class="btn btn-success px-5 mr-1" type="button" class="btn btn-default">Add</button>
+            <button class="btn btn-outline-primary px-5" type="button" class="btn btn-default">Reset</button>
+        </form>
 
-    <br>
-    <table class="table table-hover">
-        <thead>
-        <tr>
-            <th>Firstname</th>
-            <th>Lastname</th>
-            <th>Email</th>
-            <th>Delete</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>john@example.com</td>
-            <td><button class="btn btn-danger btn-sm">Delete</button></td>
-        </tr>
-        <tr>
-            <td>Mary</td>
-            <td>Moe</td>
-            <td>mary@example.com</td>
-            <td><button class="btn btn-danger btn-sm">Delete</button></td>
-        </tr>
-        </tbody>
-    </table>
-</div>
+        <br>
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>Firstname</th>
+                    <th>Lastname</th>
+                    <th>Email</th>
+                    <th>Delete</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>John</td>
+                    <td>Doe</td>
+                    <td>john@example.com</td>
+                    <td><button class="btn btn-danger btn-sm">Delete</button></td>
+                </tr>
+                <tr>
+                    <td>Mary</td>
+                    <td>Moe</td>
+                    <td>mary@example.com</td>
+                    <td><button class="btn btn-danger btn-sm">Delete</button></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <script>
+        // first name
+        let inputFirstName = document.querySelector("input#firstname");
+        inputFirstName.addEventListener('focus', function () {
+            const errMess = inputFirstName.parentElement.querySelector('div.errMess');
+            if (errMess != null) {
+                errMess.style.display = 'none';
+            }
+        });
+        inputFirstName.addEventListener('blur', function () {
+            const errMess = document.createElement("div");
+            errMess.className = "errMess";
+            inputFirstName.parentNode.insertBefore(errMess, inputFirstName.nextSibling);
+            if (inputFirstName.value === '') {
+                errMess.innerHTML = 'Please enter your first name.';
+                errMess.style.color = 'red';
+            }
+            else {
+                errMess.style.display = 'none';
+            }
 
+        })
+        // last name
+        let inputLastName = document.querySelector("input#lastname");
+        inputLastName.addEventListener('focus', function () {
+            const errMess = inputLastName.parentElement.querySelector('div.errMess');
+            if (errMess != null) {
+                errMess.style.display = 'none';
+            }
+        });
+        inputLastName.addEventListener('blur', function () {
+            const errMess = document.createElement("div");
+            errMess.className = "errMess";
+            inputLastName.parentNode.insertBefore(errMess, inputLastName.nextSibling);
+            if (inputLastName.value === '') {
+                errMess.innerHTML = 'Please enter your last name';
+                errMess.style.color = 'red';
+            }
+            else {
+                errMess.style.display = 'none';
+            }
+
+        })
+        //email
+        let inputEmail = document.querySelector("input#email");
+        inputEmail.addEventListener('blur', function () {
+            let regex = /\w+@\w+.\w+/;
+            let email = inputEmail.value;
+            const err = document.createElement("div");
+            err.className = "err";
+            err.style.color='red';
+            inputEmail.parentNode.insertBefore(err, inputEmail.nextSibling);
+            if (email === '') {
+                err.innerHTML = 'Please enter your email.';
+            }
+            else if (!regex.test(email)) {
+                err.innerHTML = 'Your email is not correct.';
+            }
+            else{
+                err.style.display='none';
+            }
+        });
+        inputEmail.addEventListener('focus',function(){
+            let err =inputEmail.parentElement.querySelector('div.err');
+            if (err!=null){
+                err.style.display='none';
+            }
+        })
+    </script>
 </body>
+
 </html>
