--- a/exercise4.html
+++ b/exercise4.html
@@ -1,42 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
     <title>Table</title>
 </head>
+
 <body>
+    <style>
+        * {
+            box-sizing: border-box;
+        }
 
-<style>
-    *{
-        box-sizing: border-box;
-    }
+        select {
+            float: left;
+        }
 
-    select{
-        float: left;
-    }
-    img{
-        float: left;
-    }
-</style>
+        img {
+            float: left;
+        }
+    </style>
 
+    <select id="imageList" name="imageList" size="10">
+        <option value="pic_001.jpg" selected>pic_001.jpg</option>
+        <option value="pic_002.jpg">pic_002.jpg</option>
+        <option value="pic_003.jpg">pic_003.jpg</option>
+        <option value="pic_004.jpg">pic_004.jpg</option>
+        <option value="pic_005.jpg">pic_005.jpg</option>
+        <option value="pic_006.jpg">pic_006.jpg</option>
+        <option value="pic_007.jpg">pic_007.jpg</option>
+        <option value="pic_008.jpg">pic_008.jpg</option>
+        <option value="pic_009.jpg">pic_009.jpg</option>
+        <option value="pic_010.jpg">pic_010.jpg</option>
+    </select>
+    <img src="images/pic_001.jpg" />
+    <button type="button" class="btn-back">Back</button>
+    <button type="button" class="btn-slide">Start slideshow</button>
+    <button type="button" class="btn-next">Next</button>
+    <p>pic_001.jpg (1/10)</p>
 
-<select id="imageList" name="imageList" size="10">
-    <option value="pic_001.jpg">pic_001.jpg</option>
-    <option value="pic_002.jpg">pic_002.jpg</option>
-    <option value="pic_003.jpg">pic_003.jpg</option>
-    <option value="pic_004.jpg">pic_004.jpg</option>
-    <option value="pic_005.jpg">pic_005.jpg</option>
-    <option value="pic_006.jpg">pic_006.jpg</option>
-    <option value="pic_007.jpg">pic_007.jpg</option>
-    <option value="pic_008.jpg">pic_008.jpg</option>
-    <option value="pic_009.jpg">pic_009.jpg</option>
-    <option value="pic_010.jpg">pic_010.jpg</option>
-</select>
-<img src="images/pic_001.jpg">
-<button type="button" >Back</button>
-<button type="button" >Start slideshow</button>
-<button  type="button">Next</button>
-<p >pic_001.jpg (10/55)</p>
+    <script>
+        const btnBack = document.querySelector('button.btn-back');
+        const btnSlide = document.querySelector('button.btn-slide');
+        const btnNext = document.querySelector('button.btn-next');
+        const image = document.querySelector('img');
+        const imgList = document.querySelector('select#imageList');
+        const p = document.querySelector('p');
+        var index = 1;
+        let intervalId;
+
+        const changeImg = () => {
+            const src = imgList.options[index].value;
+            p.innerText = `${src} (${index + 1}/10)`;
+            image.src = `images/${src}`;
+        }
+        const startSlideshow = () => {
+            intervalId = setInterval(() => {
+                index = (index + 1) % imgList.options.length;
+                changeImg();
+                imageList.selectedIndex = index;
+            }, 1000);
+        };
+        const stopSlideshow = () => {
+            clearInterval(intervalId);
+        };
+
+        imgList.addEventListener('change', () => {
+            index = imgList.selectedIndex;
+            changeImg();
+        });
+        btnBack.addEventListener('click', () => {
+            if (index >= 1)
+                index--;
+            changeImg();
+            imageList.selectedIndex = index;
+        });
+        btnNext.addEventListener('click', () => {
+            if (index <= 8)
+                index++;
+            changeImg();
+            imageList.selectedIndex = index;
+        });
+        btnSlide.addEventListener('click', (e) => {
+            if (e.target.innerText === "Start slideshow") {
+                e.target.innerText = "Stop slideshow";
+                startSlideshow();
+            } else {
+                e.target.innerText = "Start slideshow";
+                stopSlideshow();
+            }
+        });
+    </script>
 </body>
+
 </html>
